# MableOS

./: .clang-format  CMakeLists.txt  README.md
Base/etc/: fstab
Base/etc/Services/: System.ini  Window.ini
Libraries/Core/: CMakeLists.txt  EventLoop.cpp  EventLoop.hpp  Ini.cpp  Ini.hpp  Log.hpp
Scripts/: Run.sh  SetupImage.sh  SetupRootFilesystem.sh  SetupToolchain.sh
Scripts/Configs/: Kernel.config  Toolchain.config
Services/: CMakeLists.txt
Services/System/: CMakeLists.txt  Main.cpp  Service.cpp  Service.hpp
Services/Window/: CMakeLists.txt  Main.cpp  Screen.cpp  Screen.hpp
Utilities/: CMakeLists.txt
Utilities/Mount/: CMakeLists.txt  Main.cpp
