cmake_minimum_required(VERSION 3.22)
project(MableOS CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_SYSTEM_NAME MableOS)
set(CMAKE_SYSTEM_PROCESSOR x86)

set(CMAKE_SYSROOT ${CMAKE_BINARY_DIR}/Sysroot)
set(CMAKE_STAGING_PREFIX ${CMAKE_SYSROOT})
set(CMAKE_INSTALL_PREFIX ${CMAKE_SYSROOT})
set(CMAKE_INSTALL_DATAROOTDIR ${CMAKE_SYSROOT}/res)

set(TOOLCHAIN ${CMAKE_BINARY_DIR}/Tools/Cross/bin/i686-mableos-linux-gnu)
set(CMAKE_ASM_COMPILER ${TOOLCHAIN}-gcc)
set(CMAKE_C_COMPILER ${TOOLCHAIN}-gcc)
set(CMAKE_CXX_COMPILER ${TOOLCHAIN}-g++)
set(CMAKE_LINKER ${TOOLCHAIN}-ld)
set(CMAKE_AR ${TOOLCHAIN}-ar)
set(CMAKE_OBJCOPY ${TOOLCHAIN}-objcopy)
set(CMAKE_RANLIB ${TOOLCHAIN}-ranlib)
set(CMAKE_STRIP ${TOOLCHAIN}-strip)

set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)

add_compile_options(-Wall -Wextra)

add_custom_target(toolchain
        COMMAND "SOURCE_DIR=${CMAKE_SOURCE_DIR}" "SYSROOT_DIR=${CMAKE_SYSROOT}" ${CMAKE_SOURCE_DIR}/Scripts/SetupToolchain.sh
        USES_TERMINAL)

function(mableos_bin bin_name)
    add_executable(${bin_name} ${SOURCES})
    install(TARGETS ${bin_name} RUNTIME DESTINATION bin)
endfunction()

add_subdirectory(Services)